[gd_scene load_steps=10 format=3 uid="uid://cjgfs5oykdku7"]

[ext_resource type="Texture2D" uid="uid://dx1ee7kr37uvo" path="res://pong-galaxy-background-alt.jpg" id="1_5h837"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_nrc8p"]
[ext_resource type="Script" path="res://scenes/Player.gd" id="3_nx1ab"]
[ext_resource type="Script" path="res://scenes/Ball.gd" id="4_6fvw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwoxf"]
size = Vector2(20, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pfyg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cqq3"]
size = Vector2(1280, 45.0156)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wi8e"]
size = Vector2(56, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tg5a"]
size = Vector2(64, 720)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_5h837")
centered = false
script = ExtResource("2_nrc8p")

[node name="MiddleBar" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -360.0
offset_right = 10.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(40, 360)
script = ExtResource("3_nx1ab")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -100.0
offset_right = 20.0
offset_bottom = 100.0
grow_vertical = 2
color = Color(0.12549, 0.501961, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 2.08165e-12)
shape = SubResource("RectangleShape2D_pwoxf")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(640, 360)
collision_mask = 3
script = ExtResource("4_6fvw5")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_6pfyg")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(640, 742.672)
shape = SubResource("RectangleShape2D_5cqq3")

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(640, -22.5078)
shape = SubResource("RectangleShape2D_5cqq3")

[node name="Right" type="CollisionShape2D" parent="Borders"]
position = Vector2(1308, 360)
shape = SubResource("RectangleShape2D_2wi8e")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 360)
shape = SubResource("RectangleShape2D_3tg5a")
debug_color = Color(0.980392, 0, 0, 0.419608)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 510.0
offset_right = 637.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "0"

[node name="ScoreText" type="Label" parent="HUD"]
offset_left = 383.0
offset_right = 510.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "Score: "

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
